--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ h1 {
 h1,h2 {
   font-family: 'Sansita Swashed', cursive;
   text-align: center;
+  text-decoration: none;
 }
 div p {
   letter-spacing: 1px;
