--- a/css/styles.css
+++ b/css/styles.css
@@ -30,5 +30,17 @@ div p {
 .gmap_canvas {
   overflow: hidden;
   background: none !important;
-  align-items: center;
+  align-items: center; 
 }
+
+#thingsToDoCarousel {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;  
+}
+
+ #thingsToDoCarousel img {
+  width: 600px;
+  height: 360px;
+} 
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5); }
